; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_unsharp_hook.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_unsharp_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_video = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.gl_transform = type { i32 }
%struct.image = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"unsharp masking\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_video*, i32, %struct.gl_transform*, i8*)* @unsharp_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unsharp_hook(%struct.gl_video* %0, i32 %1, %struct.gl_transform* %2, i8* %3) #0 {
  %5 = alloca %struct.image, align 4
  %6 = alloca %struct.gl_video*, align 8
  %7 = alloca %struct.gl_transform*, align 8
  %8 = alloca i8*, align 8
  %9 = getelementptr inbounds %struct.image, %struct.image* %5, i32 0, i32 0
  store i32 %1, i32* %9, align 4
  store %struct.gl_video* %0, %struct.gl_video** %6, align 8
  store %struct.gl_transform* %2, %struct.gl_transform** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load %struct.gl_video*, %struct.gl_video** %6, align 8
  %11 = call i32 @pass_describe(%struct.gl_video* %10, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.gl_video*, %struct.gl_video** %6, align 8
  %13 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.gl_video*, %struct.gl_video** %6, align 8
  %16 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @pass_sample_unsharp(i32 %14, i32 %18)
  ret void
}

declare dso_local i32 @pass_describe(%struct.gl_video*, i8*) #1

declare dso_local i32 @pass_sample_unsharp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
